# pysnipeit

./: .gitignore  LICENSE  README.md  implementation.md  pyproject.toml  requirements.txt  setup.cfg
example_scripts/: sync_ad_users_to_snipe_it.py
src/: Classes.py  __init__.py  accessories.py  assets.py  licenses.py  user.py
src/pysnipeit/: Classes.py  accessories.py  assets.py  licenses.py  user.py
