[metadata]
name = pysnipeit
version = 0.1
author = Anthany Martin
author_email = 4kmartin@gmail.com
description = a python wrapper for the SnipeIT REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/4kmartin/pysnipeit
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:

[options.packages.find]
include = src